--- a/Assignments Security 2.0/public/stylesheets/style.css
+++ b/Assignments Security 2.0/public/stylesheets/style.css
@@ -1,8 +1,32 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Open Sans', sans-serif;
 }
 
-a {
-  color: #00B7FF;
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #030613;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover {
+    background-color: #ff006a;
+}
+
+body {
+    color: #fff;
+    background: #030613;
+    min-height: 100vh;
 }
