--- a/Assignments Security 2.0/views/dashboard.pug
+++ b/Assignments Security 2.0/views/dashboard.pug
@@ -2,4 +2,6 @@ extends layout
 
 block content
     h1= subtitle
-    p Welcome to #{user.name}
+    |
+    br
+    p We're so sorry #{user.name}, but it doesn't look like there is anything here yet.
