--- a/Assignments Security 2.0/views/layoutFrontpage.pug
+++ b/Assignments Security 2.0/views/layoutFrontpage.pug
@@ -5,7 +5,7 @@ html
     meta(charset='utf-8')
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     link(rel="icon", type="image/svg+xml", href="/favicon.svg")
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/styleFrontpage.css')
     script(type="module", src='/javascripts/nquery.js')
   body
     header
@@ -28,9 +28,8 @@ html
             li
               a(style="float:right" href="/users/login") Login
     main
-      h2= title
       block content
-    footer
-        div(id="cpy")
-        div
-          a(href="#") twitter
+    //- footer
+    //-     div(id="cpy")
+    //-     div
+    //-       a(href="#") twitter
